# phyjs_rust

./: .gitignore  Cargo.toml  README.md  Rocket.toml  help.md  vercel.json
src/: main.rs
src/controllers/: error_controller.rs  home_controller.rs  mod.rs
src/views/: index.html.j2
src/views/base/: footer.html.j2  layout.html.j2  nav.html.j2
src/views/error/: _404_.html.j2
src/views/home/: index.html.j2
src/views/home/base/: layout.html.j2
src/views/static/: app.js
src/views/static/css/: style.css
src/views/tera/: index.html.tera
src/views/tera/pages/: home.html.tera
