[package]
name = "phyjs"
version = "0.1.0"
edition = "2021"

# to vercel
[[bin]]
name = "main"
path = "src/main.rs"  # Ajuste o caminho se necessário


[dependencies]
rocket = "0.5.0"
tokio = { version = "1", features = ["full"] }

[dependencies.rocket_dyn_templates]
version = "0.2.0"
features = ["handlebars", "tera", "minijinja"]

	
